--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Student Success App</title>
 
     <h1>Student Success App</h1>  
-    <h2>Abrahim Test</h2> 
+    <h2>Abrahim Test</h2>
+    <h3>Test Merge Request</h3>
 
 </head>
 <body>
